Improve sass styles

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -21,8 +21,8 @@ $gray-800: #343a40;
 $gray-900: #212529;
 $black:    #000;
 
-$color-link: #1177EE;
-$color-visited-link: #7823c9;
+$color-link: #4092f1;
+$color-visited-link: #8440f1;
 
 $body-background: white;
 $body-font-color: $gray-800;
