--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -5,8 +5,9 @@ $block-border-radius: 0.15rem;
 .markdown {
   line-height: 1.7;
 
-  :first-child {
+  > :first-child {
     margin-top: 0;
+    line-height: 1em;
   }
 
   h1, h2, h3, h4, h5 {
