Improve font rendering

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -21,7 +21,7 @@ $gray-800: #343a40;
 $gray-900: #212529;
 $black:    #000;
 
-$color-link: #4092f1;
+$color-link: #004ed0;
 $color-visited-link: #8440f1;
 
 $body-background: white;
