--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -16,7 +16,7 @@ $block-border-radius: 0.15rem;
   }
 
   b, optgroup, strong {
-    font-weight: 400;
+    font-weight: 700;
   }
   
   a {
@@ -28,7 +28,7 @@ $block-border-radius: 0.15rem;
   }
 
   code {
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Oxygen Mono', monospace;
   }
 
   p code {
