fix urls when baseURL is not at root

--- a/layouts/partials/docs/mobile-header.html
+++ b/layouts/partials/docs/mobile-header.html
@@ -1,4 +1,4 @@
 <label for="menu-control">
-  <img src="{{- .Site.BaseURL -}}/svg/menu.svg" />
+  <img src="{{ "svg/menu.svg" | absURL }}" />
 </label>
 <strong>{{- template "title" . }}</strong>
