--- a/layouts/partials/docs/mobile-header.html
+++ b/layouts/partials/docs/mobile-header.html
@@ -1,4 +1,6 @@
-<label for="menu-control">
-  <img src="{{ "svg/menu.svg" | absURL }}" />
-</label>
-<strong>{{- template "title" . }}</strong>
+<header class="align-center justify-between book-header">
+  <label for="menu-control">
+    <img src="{{ "svg/menu.svg" | absURL }}" />
+  </label>
+  <strong>{{- template "title" . }}</strong>
+</header>
