#5, Insert google analytics template to body

--- a/layouts/docs/baseof.html
+++ b/layouts/docs/baseof.html
@@ -41,6 +41,7 @@
     {{ end }}
 
     {{ partial "docs/inject/body" . }}
+    {{ template "_internal/google_analytics_async.html" . }}
   </main>
 </body>
 
