--- a/layouts/posts/baseof.html
+++ b/layouts/posts/baseof.html
@@ -13,8 +13,9 @@
       {{ template "main" . }}
     </div>
   </main>
-  {{ partial "docs/inject/body" . }}
 
+  {{ partial "docs/inject/body" . }}
+  {{ template "_internal/google_analytics_async.html" . }}
 </body>
 
 </html>
