Cleanup posts rendering

--- a/layouts/posts/baseof.html
+++ b/layouts/posts/baseof.html
@@ -8,10 +8,8 @@
 </head>
 
 <body>
-  <main>
-    <div class="book-posts mx-auto">
-      {{ template "main" . }}
-    </div>
+  <main class="book-posts mx-auto">
+    {{ template "main" . }}
   </main>
 
   {{ partial "docs/inject/body" . }}
