--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,7 +2,9 @@
 {{ define "main"}}
 <main id="main">
   <div>
-   <h1 id="title"><a href="{{ "/docs" }}">Go Home</a></h1>
+   <h1 id="title"><a href="{{ "/" }}">Go Home</a></h1>
   </div>
 </main>
 {{ end }}
+
+{{ define "toc" }} {{ end }}
