--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -1,1 +1,9 @@
-{{ define "." }} {{ end }}
+{{ define "main" }}
+<article class="markdown">
+  {{- .Content -}}
+</article>
+{{ end }}
+
+{{ define "toc" }}
+  {{ partial "docs/toc" . }}
+{{ end }}
