--- a/layouts/partials/docs/toc.html
+++ b/layouts/partials/docs/toc.html
@@ -1,1 +1,6 @@
-{{ .Page.TableOfContents }}
+{{ $showToC := default (default true .Site.Params.BookShowToC) .Params.bookshowtoc }}
+  {{ if and ($showToC) (.Page.TableOfContents) }}
+  <aside class="book-toc fixed">
+    {{ .Page.TableOfContents }}
+  </aside>
+{{ end }}
