add flex for edit-this-page div

--- a/assets/book.scss
+++ b/assets/book.scss
@@ -133,6 +133,18 @@ ul.pagination {
   }
 }
 
+.book-git-footer {
+  display: flex;
+  margin-top: $padding-16;
+  font-size: $font-size-12;
+  align-items: baseline;
+
+  img {
+    width: $font-size-12;
+	vertical-align: bottom;
+  }
+}
+
 .book-posts {
   min-width: $body-min-width;
   max-width: $sm-breakpoint;
