--- a/layouts/docs/baseof.html
+++ b/layouts/docs/baseof.html
@@ -29,6 +29,7 @@
     <div class="book-page">
       {{ partial "docs/mobile-header" . }}
       {{ template "main" . }}
+      {{ partial "docs/git-footer" . }}
     </div>
 
     {{ template "toc" . }}
