--- a/layouts/posts/baseof.html
+++ b/layouts/posts/baseof.html
@@ -8,9 +8,18 @@
 </head>
 
 <body>
-  <main class="book-posts mx-auto">
-    {{ template "main" . }}
+  <input type="checkbox" style="display: none" id="menu-control" />
+  <main class="flex container">
+    <aside class="book-menu fixed">
+      {{ partial "docs/menu" . }}
+    </aside>
+
+    <div class="book-posts mr-auto">
+      {{ partial "docs/mobile-header" . }}
+      {{ template "main" . }}
+    </div>
   </main>
+  
 
   {{ partial "docs/inject/body" . }}
   {{ template "_internal/google_analytics_async.html" . }}
