--- a/layouts/docs/baseof.html
+++ b/layouts/docs/baseof.html
@@ -12,18 +12,7 @@
   <main class="flex container">
 
     <aside class="book-menu fixed">
-      <nav role="navigation">
-        {{ partial "docs/brand" . }}
-        {{ partial "docs/inject/menu-before" . }}
-
-        {{ if .Site.Params.BookMenuBundle }}
-          {{ partial "docs/menu-bundle" . }}
-        {{ else }}
-          {{ partial "docs/menu-filetree" . }}
-        {{ end }}
-
-        {{ partial "docs/inject/menu-after" . }}
-      </nav>
+      {{ partial "docs/menu" . }}
     </aside>
 
     <div class="book-page">
