--- a/layouts/partials/docs/shared.html
+++ b/layouts/partials/docs/shared.html
@@ -1,4 +1,4 @@
-<!-- These templates contains some more complex logic and shared between partials-->
+{{/*These templates contains some more complex logic and shared between partials*/}}
 {{ define "title" }}
   {{- if .Pages -}}
     {{ $sections := split (trim .Dir "/") "/" }}
