#22: Highlight current links that end with relref

--- a/layouts/partials/docs/menu-bundle.html
+++ b/layouts/partials/docs/menu-bundle.html
@@ -1,5 +1,5 @@
 <style>
-nav ul a[href="{{- .Permalink -}}"] {
+nav ul a[href$="{{- .RelPermalink -}}"] {
     color: {{ default "#004ed0" .Site.Params.BookMenuBundleActiveLinkColor }};
 }
 </style>
