#22: Move href hack to partial

--- a/layouts/partials/docs/menu-bundle.html
+++ b/layouts/partials/docs/menu-bundle.html
@@ -1,8 +1,4 @@
-<style>
-nav ul a[href$="{{- .RelPermalink -}}"] {
-    color: {{ default "#004ed0" .Site.Params.BookMenuBundleActiveLinkColor }};
-}
-</style>
+{{- template "hrefhack" . -}}
 {{ with .Site.GetPage .Site.Params.BookMenuBundle }}
   {{- .Content -}}
 {{ end }}
