--- a/layouts/partials/docs/shared.html
+++ b/layouts/partials/docs/shared.html
@@ -9,3 +9,18 @@
     {{- default $title .Title -}}
   {{- end -}}
 {{ end }}
+
+{{ define "hrefhack" }}
+  {{ $attrEq := "$=" }}
+  {{ $attrVal := .RelPermalink }}
+  {{ if eq .RelPermalink "/" }}
+    {{ $attrEq = "=" }}
+    {{ $attrVal = .Permalink }}
+  {{ end }}
+
+  <style>
+  nav ul a[href{{ $attrEq }}"{{ $attrVal }}"] {
+      color: {{ default "#004ed0" .Site.Params.BookMenuBundleActiveLinkColor }};
+  }
+  </style>
+{{ end }}
