#24: Add JS script to keep menu on same position on reload

--- a/layouts/partials/docs/shared.html
+++ b/layouts/partials/docs/shared.html
@@ -24,3 +24,16 @@
   }
   </style>
 {{ end }}
+
+{{ define "jsmenu" }}
+<script>
+(function() {
+  var menu = document.querySelector('aside.book-menu nav')
+  addEventListener('beforeunload', function(event) {
+    localStorage.setItem('menu.scrollTop', menu.scrollTop)
+  });
+
+  menu.scrollTop = localStorage.getItem('menu.scrollTop')
+})()
+</script>
+{{ end }}
