--- a/layouts/partials/docs/menu-bundle.html
+++ b/layouts/partials/docs/menu-bundle.html
@@ -2,3 +2,6 @@
 {{ with .Site.GetPage .Site.Params.BookMenuBundle }}
   {{- .Content -}}
 {{ end }}
+{{ if .Site.Params.BookEnableJS }}
+  {{- template "jsmenu" . -}}
+{{ end }}
