--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -3,7 +3,7 @@
   {{ range sort .Paginator.Pages }}
   <article>
     <h2>
-      <a href="{{ .Permalink }}">{{ .Title }}</a>
+      <a href="{{ .RelPermalink }}">{{ .Title }}</a>
     </h2>
     <h5>
       <strong>{{ .Date.Format "January 2, 2006" }}</strong>
@@ -11,7 +11,7 @@
     <p class="markdown">
       {{- .Summary -}}
       {{ if .Truncated }}
-        <a href="{{ .Permalink }}">...</a>
+        <a href="{{ .RelPermalink }}">...</a>
       {{ end }}
     </p>
   </article>
