--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -2,7 +2,7 @@
 <header>
   <h1>{{ .Title }}</h1>
   <h5>
-    <strong>{{ .Date.Format "January 2, 2006" }}</strong>
+    <strong>{{ .Date.Format .Site.Params.DateForm  }}</strong>
   </h5>
 </header>
 <article class="markdown">
