--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -6,7 +6,7 @@
       <a href="{{ .RelPermalink }}">{{ .Title }}</a>
     </h2>
     <h5>
-      <strong>{{ .Date.Format .Site.Params.DateForm }}</strong>
+      <strong>{{ .Date.Format .Site.Params.DateFormat }}</strong>
     </h5>
     <p class="markdown">
       {{- .Summary -}}
