--- a/layouts/posts/baseof.html
+++ b/layouts/posts/baseof.html
@@ -14,7 +14,7 @@
       {{ partial "docs/menu" . }}
     </aside>
 
-    <div class="book-posts mr-auto">
+    <div class="book-posts">
       {{ partial "docs/mobile-header" . }}
       {{ template "main" . }}
     </div>
