--- a/layouts/partials/docs/git-footer.html
+++ b/layouts/partials/docs/git-footer.html
@@ -2,8 +2,9 @@
 <div class="align-center book-git-footer {{ if not .GitInfo }}justify-end{{ else }}justify-between{{ end }}">
   {{ with .GitInfo }}
   <div>
-    <a href="{{ $.Site.Params.BookRepo }}/commit/{{ .Hash }}" title='Last modified {{ .AuthorDate.Local.Format $.Site.Params.DateFormat }} by {{ .AuthorName }}' target="_blank" rel="noopener">
-      <img src="{{ "svg/code-merge.svg" | relURL }}" /> {{ .AuthorDate.Local.Format $.Site.Params.DateFormat }}
+    {{- $date := .AuthorDate.Local.Format (default "January 2, 2006" $.Site.Params.BookDateFormat) -}}
+    <a href="{{ $.Site.Params.BookRepo }}/commit/{{ .Hash }}" title='Last modified {{ $date }} by {{ .AuthorName }}' target="_blank" rel="noopener">
+      <img src="{{ "svg/code-merge.svg" | relURL }}" /> {{ $date }}
     </a>
   </div>
   {{ end }}
