--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+  {{- $dateFormat := default "January 2, 2006" .Site.Params.BookDateFormat -}}
   {{ $paginator := .Paginate (where .Pages "Params.hidden" "ne" true) }}
   {{ range sort .Paginator.Pages }}
   <article>
@@ -6,7 +7,7 @@
       <a href="{{ .RelPermalink }}">{{ .Title }}</a>
     </h2>
     <h5>
-      <strong>{{ .Date.Format .Site.Params.DateFormat }}</strong>
+      <strong>{{ .Date.Format $dateFormat }}</strong>
     </h5>
     <p class="markdown">
       {{- .Summary -}}
