--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,8 +1,9 @@
 {{ define "main" }}
+{{- $dateFormat := default "January 2, 2006" .Site.Params.BookDateFormat -}}
 <header>
   <h1>{{ .Title }}</h1>
   <h5>
-    <strong>{{ .Date.Format .Site.Params.DateFormat  }}</strong>
+    <strong>{{ .Date.Format $dateFormat }}</strong>
   </h5>
 </header>
 <article class="markdown">
