--- a/layouts/docs/baseof.html
+++ b/layouts/docs/baseof.html
@@ -19,7 +19,7 @@
       {{ partial "docs/mobile-header" . }}
       {{ template "main" . }}
       {{ partial "docs/git-footer" . }}
-      {{ partial "docs/footer" . }}
+      {{ partial "docs/inject/footer" . }}
     </div>
 
     {{ template "toc" . }}
