Update favicon, update README, re-generate resources

--- a/layouts/partials/docs/html-head.html
+++ b/layouts/partials/docs/html-head.html
@@ -16,7 +16,7 @@
 {{- end }}
 
 <!-- Favicon -->
-<link rel="icon" href="{{ "img/favicon.ico" | relURL }}" type="image/x-icon">
+<link rel="icon" href="{{ "favicon.png" | relURL }}" type="image/x-icon">
 
 <!-- RSS -->
 {{ if .RSSLink }}
