--- a/layouts/partials/docs/html-head.html
+++ b/layouts/partials/docs/html-head.html
@@ -5,15 +5,10 @@
 <!-- Fonts for the theme -->
 <link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet">
 
-<!-- Theme stylesheet, if possible do not edit this stylesheet -->
+<!-- Theme stylesheet, you can customize scss by creatig `assets/custom.scss` in your website -->
 <link rel="stylesheet" href="{{ "normalize.min.css" | relURL }}">
 {{ $styles := resources.Get "book.scss" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
 <link rel="stylesheet" href="{{ $styles.RelPermalink }}">
-
-<!-- Custom stylesheet - for your changes -->
-{{ if (fileExists "styles.css" | relURL) -}}
-<link rel="stylesheet"  href="{{ "styles.css" | relURL }}?v={{ now.Unix }}" type='text/css' media='all'>
-{{- end }}
 
 <!-- Favicon -->
 <link rel="icon" href="{{ "favicon.png" | relURL }}" type="image/x-icon">
