Move footer to main body

--- a/layouts/posts/baseof.html
+++ b/layouts/posts/baseof.html
@@ -17,6 +17,7 @@
     <div class="book-posts">
       {{ partial "docs/mobile-header" . }}
       {{ template "main" . }}
+      {{ partial "docs/inject/footer" . }}
     </div>
   </main>
 
