--- a/layouts/partials/docs/git-footer.html
+++ b/layouts/partials/docs/git-footer.html
@@ -10,9 +10,9 @@
   {{ end }}
   {{ with .Site.Params.BookEditPath }}
   <div>
-    <a href="{{ $.Site.Params.BookRepo }}/{{ . }}/{{ $.File.Path }}" target="_blank" rel="noopener">
+    {{ if $.File }}<a href="{{ $.Site.Params.BookRepo }}/{{ . }}/{{ $.File.Path }}" target="_blank" rel="noopener">
       <img src="{{ "svg/code-fork.svg" | relURL }}" /> Edit this page
-    </a>
+    </a>{{ end }}
   </div>
   {{ end }}
 </div>
