--- a/layouts/partials/docs/shared.html
+++ b/layouts/partials/docs/shared.html
@@ -1,10 +1,10 @@
 {{/*These templates contains some more complex logic and shared between partials*/}}
 {{- define "title" -}}
-  {{- if .Pages -}}
-    {{ $sections := split (trim .Dir "/") "/" }}
+  {{- if and .File .Pages -}}
+    {{ $sections := split (trim .File.Dir "/") "/" }}
     {{ $title := index ($sections | last 1) 0 | humanize | title }}
     {{- default $title .Title -}}
-  {{- else -}}
+  {{- else if .File -}}
     {{ $title :=  .File | humanize | title }}
     {{- default $title .Title -}}
   {{- end -}}
