--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
-{{- $dateFormat := default "January 2, 2006" .Site.Params.BookDateFormat -}}
-<header>
+{{ $dateFormat := default "January 2, 2006" .Site.Params.BookDateFormat }}
+<header class="markdown">
   <h1>{{ .Title }}</h1>
   <h5>
     <strong>{{ .Date.Format $dateFormat }}</strong>
