--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -5,14 +5,15 @@ $block-border-radius: 0.15rem;
 .markdown {
   line-height: 1.7;
 
-  > :first-child {
-    margin-top: 0;
-    line-height: 1em;
-  }
-
   h1, h2, h3, h4, h5 {
     font-weight: 400;
     line-height: 1.25;
+
+    // remove padding at the beginning of page
+    &:first-child { 
+      margin-top: 0;
+      line-height: 1em;
+    }
   }
 
   b, optgroup, strong {
