Improve logic in title template for less warnings

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -17,7 +17,7 @@ You can override this page in:
 ` }}
 <body>
   <main class="flex justify-center">
-    <div class="book-page markdown">
+    <div class="book-home markdown">
       {{ replace $content "&#96;" "`" | markdownify }}
     </div>
   </main>
