--- a/layouts/docs/baseof.html
+++ b/layouts/docs/baseof.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {{- partial "docs/shared" -}}
-<html>
+<html lang="{{ .Site.Language.Lang }}">
 
 <head>
   {{ partial "docs/html-head" . }}
